# Know

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: commands.rs  indexer.rs  mod.rs
src-tauri/src/doc_extractor/: mod.rs  renderer.rs
src-tauri/src/fs_watcher/: mod.rs
src-tauri/src/graph_engine/: builder.rs  mod.rs
src-tauri/src/repo/: file_tree.rs  git.rs  mod.rs
src-tauri/src/rust_parser/: mod.rs  types.rs  visitor.rs
src-tauri/src/search/: mod.rs
src-tauri/src/symbol_index/: mod.rs
src/components/: ActivityBar.tsx  CodeViewer.css  CodeViewer.tsx  ErrorBanner.css  ErrorBanner.tsx  FileExplorer.css  FileExplorer.tsx  GraphView.css  GraphView.tsx  MainPanel.css  MainPanel.tsx  RustdocExplorer.css  RustdocExplorer.tsx  SearchView.css  SearchView.tsx  SidePanel.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TabBar.tsx  WelcomeView.tsx
src/styles/: App.css  global.css
src/theme/: ThemeEditor.css  ThemeEditor.tsx  defaults.ts  types.ts
src/themes/: ayu-dark.json  catppuccin-latte.json  catppuccin-mocha.json  dawn.json  dracula.json  everforest-dark.json  github-dark.json  github-light.json  gruvbox-dark.json  material-ocean.json  midnight-void.json  monokai-pro.json  nord.json  obsidian-dark.json  one-dark-pro.json  paper-light.json  rosepine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
