[package]
name = "know"
version = "0.1.0"
edition = "2021"
description = "Know — local-first Git-native documentation and code intelligence IDE"
default-run = "know"

[lib]
name = "know_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "know"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Rust parsing
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

# Git integration
git2 = { version = "0.19", default-features = false }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Search / indexing
tantivy = "0.22"

# Graph engine
petgraph = { version = "0.6", features = ["serde-1"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Path utilities
walkdir = "2"
glob = "0.3"

# Threading
dashmap = "6"
parking_lot = "0.12"

# Markdown parsing
pulldown-cmark = "0.11"

# String utilities
once_cell = "1"
regex = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
